--- a/mlbparks-templates.adoc
+++ b/mlbparks-templates.adoc
@@ -36,7 +36,7 @@ The front end application we've been working with this whole time will display
 as many back end services' data as are created. Adding more stuff with the right
 *Label* will make more stuff show up on the map.
 
-Now you will deploy a map of Major League Baseball stadiums in the US by using a
+Now you will deploy a map of Major League Baseball stadiums in North America by using a
 template. It is pre-configured to build the back end Java application, and
 deploy the MongoDB database. It also uses a *Hook* to call the `/ws/data/load`
 endpoint to cause the data to be loaded into the database from a JSON file in
