--- a/workshop/content/parksmap-logging.adoc
+++ b/workshop/content/parksmap-logging.adoc
@@ -25,7 +25,7 @@ various log information to various files, fear not.
 == Exercise: Examining Logs
 
 Since we already deployed our application, we can take some time to examine its
-logs. In the Developer Console, from Topology view, click the `parksmap` entry and then the *Resources* tab. You should see a *View Logs* link next to the *Pod* entry.
+logs. In the Developer Perspective, from Topology view, click the `parksmap` entry and then the *Resources* tab. You should see a *View Logs* link next to the *Pod* entry.
 
 image::images/parksmap-view-logs-link.png[View Logs for Pod]
 
@@ -100,11 +100,11 @@ for projects that you have access to. You will need to accept the SSL certificat
 
 image::images/parksmap-logging-kibana.png[Kibana Interface]
 
-CAUTION: In the following Kibana search(es), replace `{{ USER_PROJECT }}` with the project provided to you and the pod_name to match your pod.
+CAUTION: In the following Kibana search(es), replace `{{ project_namespace }}` with the project provided to you and the pod_name to match your pod.
 
 [source,bash,role=copypaste]
 ----
-kubernetes.pod_name:"parksmap-1-mrxfq" AND kubernetes.namespace_name:"{{ USER_PROJECT }}"
+kubernetes.pod_name:"parksmap-1-mrxfq" AND kubernetes.namespace_name:"{{ project_namespace }}"
 ----
 
 [NOTE]
@@ -115,11 +115,11 @@ If your search returns no hits, try changing the time-picker in the top right-ha
 If you want to see all the historical logs for this *Project*, simply remove the
 pod name reference and click the magnifying glass or press the enter key.
 
-CAUTION: In the following Kibana search(es), replace `{{ USER_PROJECT }}` with the project provided to you.
+CAUTION: In the following Kibana search(es), replace `{{ project_namespace }}` with the project provided to you.
 
 [source,bash,role=copypaste]
 ----
-kubernetes.namespace_name:"{{ USER_PROJECT }}"
+kubernetes.namespace_name:"{{ project_namespace }}"
 ----
 
 If you click the "x" in the column for the container name, and, in the left bar,
@@ -131,9 +131,9 @@ image::images/parksmap-logging-kibana-parksmap-headers.png[Kibana Interface]
 
 Try the following search string ensuring that you use the correct name for your project:
 
-CAUTION: In the following Kibana search(es), replace `{{ USER_PROJECT }}` with the project provided to you.
+CAUTION: In the following Kibana search(es), replace `{{ project_namespace }}` with the project provided to you.
 
 [source,bash,role=copypaste]
 ----
-kubernetes.namespace_name:"{{ USER_PROJECT }}" AND message:"Failure executing"
+kubernetes.namespace_name:"{{ project_namespace }}" AND message:"Failure executing"
 ----
