--- a/workshop/content/nationalparks-javascript.adoc
+++ b/workshop/content/nationalparks-javascript.adoc
@@ -86,7 +86,7 @@ Similar to how we used "Add to project" before with an existing image, we
 can do the same for specifying a source code repository. Since for this lab you
 have your own git repository, let's use it with a simple JavaScript S2I image.
 
-In the Developer Console, click *+Add* in the left navigation and then choose "From Git"
+In the Developer Perspective, click *+Add* in the left navigation and then choose "From Git"
 
 image::images/nationalparks-show-add-options.png[Add to Project]
 
