--- a/workshop/content/parksmap-docker.adoc
+++ b/workshop/content/parksmap-docker.adoc
@@ -12,7 +12,7 @@ Return to the web console:
 
 link:{{console_url}}[Web Console]
 
-In the *Administrator* view, click *Projects* in the left navigation if it isn't already selected. Find your *{{ USER_PROJECT }}* project and click it. 
+In the *Administrator* view, click *Projects* in the left navigation if it isn't already selected. Find your *{{ project_namespace }}* project and click it. 
 
 image::images/parksmap-administrator-projects.png[Select Project]
 
@@ -20,7 +20,7 @@ On the next page, you'll see some details about the resources in your project. S
 
 image::images/parksmap-administrator-project-details.png[Project Details]
 
-This will take you to the *Topology* view in the Developer Console. Click *Container Image* to open a dialog that will allow you to specify the information for the image you want to deploy.  
+This will take you to the *Topology* view in the Developer Perspective. Click *Container Image* to open a dialog that will allow you to specify the information for the image you want to deploy.  
 
 image::images/parksmap-devconsole-container-image.png[Add from Container Image]
 
@@ -31,16 +31,17 @@ In the *Image Name* field, copy/paste the following into the box:
 docker.io/openshiftroadshow/{{PARKSMAP_IMAGENAME}}:{{PARKSMAP_VERSION}}
 ----
 
+Either press *enter* or click on the magnifying glass. OpenShift will then go
+out to the container registry specified and interrogate the image. 
+
 Your screen will end up looking something like this:
 
 image::images/parksmap-image.png[Explore Project]
 
-Either press *enter* or click on the magnifying glass. OpenShift will then go
-out to the container registry specified and interrogate the image. You then are
-presented with some options to add labels, scaling, etc. -- which we will learn about later.
-
 
 Make sure to have the correct values in the *Application Name* and *Name* fields. 
+
+image::images/parksmap-image-options.png[Explore Project]
 
 At the bottom of the page, click *Labels* in the Advanced Options section and add some labels to better identify this deployment later. Labels will help us identify and filter components in the web console and in the command line.
 
@@ -52,7 +53,6 @@ We will add 3 labels:
 
 Un-check the checkbox next to "Create a route to the application". For learning purposes, we will create a *Route* for the application later in the workshop.
 
-image::images/parksmap-image-options.png[Explore Project]
 
 Next, click the blue *Create* button. You will be directed to the *Topology* page, where you should see the visualization for the `parksmap` deployment config in the `workshop` application.
 
@@ -88,7 +88,7 @@ server, a log analyzer, and a file service to help manage uploaded files.
 
 == Exercise: Examining the Pod
 
-If you click on the `parksmap` entry in the Topology view, you will see some information about that deployment config. On that panel, you will see that there is a single *Pod* that was created by your actions. 
+If you click on the `parksmap` entry in the Topology view, you will see some information about that deployment config. The *Resources* tab may be displayed by default. If so, click on the *Overview* tab. On that panel, you will see that there is a single *Pod* that was created by your actions. 
 
 image::images/parksmap-overview.png[Pod overview]
 
@@ -232,7 +232,7 @@ IP/Port combination of 172.30.22.209/8080TCP. Your IP address may be different, 
 each *Service* receives a unique IP address upon creation. *Service* IPs are
 fixed and never change for the life of the *Service*.
 
-In the Developer Console from the Topology view, service information is available by clicking the `parksmap` deployment config, then *Resources*, and then you should see the `parksmap` entry in the *Services* section.
+In the Developer Perspective from the Topology view, service information is available by clicking the `parksmap` deployment config, then *Resources*, and then you should see the `parksmap` entry in the *Services* section.
 
 image::images/parksmap-serviceslist.png[Services list]
 
