--- a/workshop/content/parksmap-permissions.adoc
+++ b/workshop/content/parksmap-permissions.adoc
@@ -11,7 +11,7 @@ The **default** service account is the one taking the responsibility of running 
 every pod that is launched. By changing the permissions for that service
 account, we can do interesting things.
 
-You can view current permissions in the web console, go to the Topology view in the Developer Console, click the `parksmap` entry, and then click the *Namespace*. 
+You can view current permissions in the web console, go to the Topology view in the Developer Perspective, click the `parksmap` entry, and then click the *Namespace*. 
 
 image::images/parksmap-permissions-namespace.png[Namespace]
 
@@ -74,7 +74,7 @@ image::images/parksmap-permissions-membership-serviceaccount-done.png[Service ac
 One more step is required. We need to re-deploy the `parksmap` application because it's
 given up trying to query the API.
 
-This time we'll use the web console. In the Developer Console, in Topology view, click the `parksmap` entry. Then, in the *Actions* dropdown menu, select *Start Rollout*.
+This time we'll use the web console. In the Developer Perspective, in Topology view, click the `parksmap` entry. Then, in the *Actions* dropdown menu, select *Start Rollout*.
 
 image::images/parksmap-permissions-start-rollout.png[Start rollout]
 
@@ -89,11 +89,11 @@ If you create a project, you are that project's administrator. This means that
 you can grant access to other users, too. If you like, give your neighbor view
 access to your project using the following command:
 
-CAUTION: In the following command(s), replace `{{ USER_PROJECT }}` with the user name of the person to whom you want to grant access.
+CAUTION: In the following command(s), replace `{{ project_namespace  }}` with the user name of the person to whom you want to grant access.
 
 [source,bash,role=copy-and-edit]
 ----
-oc policy add-role-to-user view {{ USER_PROJECT }}
+oc policy add-role-to-user view {{ project_namespace  }}
 ----
 
 Have them go to the project view by clicking the *Projects* button and verify
